k8s/overlays/staging/medialab/env.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halexp
spec:
  template:
    spec:
      containers:
        - name: halexp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
        - name: nginx
