k8s/overlays/staging/medialab/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
  - host: experts-search-pprd.sciences-po.fr
    http:
      paths:
        - path: /medialab(/|$)(.*)
          backend:
            serviceName: nginx
            servicePort: 80
